css/style.css
/* Defining global scope CSS variables */
:root {
    --beige: #fffff9;
    --cream: #ffffea;
    --almond: #fcf8ef;
    --sand: #dad49c;
    --earth: #88835f;
    --bread: #8c7a5f;
    --brown: #51412d;
    --otherBrown: #3b270c;
    --green: #77866d;
}

.text-1 {
    background-color: #f8f9fa;
    /* color: var(--otherBrown); */
}

.text-2 {
    background-color: var(--almond);
    color: var(--otherBrown);
}

.text-3 {
    background-color: var(--bread);
    color: white;
}

.logo {
    max-height: 60px;
}

.home-banner {
    background-color: var(--bread);
}

.home-banner-text-div {
    z-index: 2;
}

.home-banner-img {
    background-image: url(../img/kneading-bw-800x600.jpg);
    background-position: right;
    background-size: cover;
    height: 40vh;
    min-height: 400px;
}

/* Media query for small screen sizes and smaller */
@media (max-width: 576px) {
    .location-footer {
        font-size: 0.9rem;
    }

    .location-footer-title {
        font-size: 1.1rem;
        font-weight: 600;
    }
}

.footer {
    background-color: #f8f9fa;
    color: rgba(0, 0, 0, 0.5);
}

.menu-img {
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 200px;
    color: white;
}

.menu-text-col {
    background-color: var(--green);
    max-height: 1080px;
    color: white;
}

.menu-text {
    margin: 1rem 6px -6px 6px;
}

.menu-img-1 {
    background-image: url(../img/bread-selection-800x534.jpg);
    background-position: bottom;
}

.menu-img-2 {
    background-image: url(../img/muffins-basket-800x1200.jpg);
    background-position: right;
}

.menu-img-3 {
    background-image: url(../img/latte-800x533.jpg);
    background-position: center;
}

.menu-filler {
    border-bottom: solid white 1px;
}

.find-us {
    min-height: 75vh;
}

.find-us-1 {
    background-image: url("../img/leaf-loaf-720x1080.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    max-height: 1080px;
    color: white;
}

.find-us-2 {
    background-color: var(--beige);
    max-height: 1080px;
}

.about-r1-c1 {
    background-image: url("../img/bread-crop.jpg");
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 40vh;
}

.about-r1-c2 {
    background-color: var(--almond);
    color: var(--otherBrown);
}

.about-r2-c1 {
    background-image: url("../img/croissant-900x720.jpg");
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 40vh;
}

.about-r2-c2 {
    background-color: var(--almond);
    color: var(--otherBrown);
}

